@@ -9,6 +9,9 @@
 	* c_src/exmpp_stringprep_drv.c: Add a command to return the port
 	driver $Revision$. Style.
 
+	* src/core/exmpp_internals.erl: Use exceptions for error handling. Add
+	basic documentation.
+
 2008-04-17  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* doc/Makefile.am: Wildcards are voluntarily not supported by
